--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/style.css">
   
   <!-- Page Title -->
-  <title>Notification page</title>
+  <title>3 notifications page</title>
 
 </head>
 
@@ -23,7 +23,9 @@
   <main>
     <div class="head">
       <h1>Notifications <span>3</span></h1>
-      <button>Mark all as read</button>
+      <p>
+        <a href="#">Mark all as read</a> 
+      </p> 
     </div>
 
     <ul>
@@ -119,5 +121,8 @@
       </li>
     </ul>
   </main>  
+
+  <!--Script JS-->
+  <script src="js/index.js"></script>
 </body>
 </html>
